ckanext/odm_nav/fanstatic/odm_nav.css
/* ... */
#facet-filters {
    margin-top: 0px;
}

body.odt .clear-filters .button, body.odt .btn-primary {
    background: #64161d;
}

body.odm .clear-filters .button, body.odm .btn-primary {
    background: #292d56;
}

body.odc .clear-filters .button, body.odc .btn-primary {
    background: #06323d;
}

body.odl .clear-filters .button, body.odl .btn-primary {
    background: #3b2226;
}

body.odmy .clear-filters .button, body.odmy .btn-primary {
    background: #59396c;
}

body.odv .clear-filters .button, body.odv .btn-primary {
    background: #50813b;
}

.btn-download {
    background-color: #292e55;
    width: 15rem;
    float: right;
}

div.dataset-list-metadata span {
    padding-right: 1em;
}

div.dataset-list-metadata {
    margin-bottom: .25em;
}

.clearfix {
    margin-bottom: 0;
    margin-top: 0;
}

.masthead .navbar-collapse {
    padding: 0;
    width:100%;
}

/*colour the hr under the top menu*/
body.odt .clearfix {
    border-top: 1px solid #f7904d;
}

body.odm .clearfix {
    border-top: 1px solid #6393d2;
}

body.odc .clearfix {
    border-top: 1px solid #97d320;
}

body.odl .clearfix {
    border-top: 1px solid #d61e2a;
}

body.odmy .clearfix {
    border-top: 1px solid #f8bf42;
}

body.odv .clearfix {
    border-top: 1px solid #beab74;
}

.navbar-nav > li > a {
    padding-top: 0;
    padding-bottom 0;
}

@media (min-width: 768px) {
    .navbar-nav > li > a {
        padding-top: 0;
        padding-bottom: 0;
    }
}

.container-header {
    width: 100% !important;
    padding-left: 0;
    padding-right:0;

}

.select2-container {
    /*margin-top: 1px;*/
    margin-bottom: 0px;
}

#od-logo {
    margin-left:146px;
}

#mega-menu-wrap-header_menu {
    padding-left:143px !important;
}


@media only screen and (max-width: 1000px) {
  #mega-menu-wrap-header_menu {
    padding-left: 0 !important;
  }
}

@media only screen and (max-width: 1000px) {
  #od-logo {
    margin-left: 0;
  }
}

@media only screen and (max-width: 1000px) {
  .social {
    margin-right: 5px;
  }
}

@media only screen and (max-width: 1000px) {
  #main-navigation-toggle {
    z-index: 5;
  }
}

/* from odm_dataset, one less request */
.disclaimer{
    padding: 20px;
    font-size: 14px;
    color: #FF0000;
    border-bottom: 1px solid #CCC;
}

.select2-disabled{
    text-decoration: line-through;
    color: #CCCCCC;
}

/* fix the plus button alignment in resource view filters */
/* this actually centers all icon only buttons */
.btn .fa:first-child:last-child {
    margin-right: 0;
}

.reference a {
    color: #3030ab;
}

/* ensures margin between any two successive buttons */
a.btn + a.btn {
    margin-left: 4px;
}

.resource-view-filters-header {
    display: none;
}

.used .resource-view-filters-header {
    display: block;
    margin: 1rem;
}

.resource-view-filter-label {
    display: inline-block;
    padding: 4px;
    margin: 2px;
    width: 150px;
}

.resource-view-filters .resource-view-filter {
    margin-bottom: .25em;
    padding: .25em;
}

.resource-view-filter-values {
    display: inline-block;
    max-width: 100%;
}

/* must be important, there's an auto on the element */
.resource-view-filters .resource-view-filter-values .select2-container {
    width: 250px!important;
}

.resource-view-filters>div.used {
    border: 1px solid #ccc;
    border-radius: 5px;
    margin-bottom: .5rem;
    background: #f9f9f9;
}

.map-explorer-fullscreen{
    display: none;
    margin-top: 10px;
    position: relative;
    text-align: right;
}

.dataset-resource-text .dropdown-menu{
    position: relative;
    float: right;
}

.select2-results .select2-disabled, .select2-results__option[aria-disabled=true] { 
    display: none;
}

.panel-body{
   overflow: scroll;
}

